--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-numpy==1.14.0
-pandas==0.23.4
-gdown==3.10.1
-tqdm==4.30.0
-Pillow==5.2.0
+numpy>=1.14.0
+pandas>=0.23.4
+gdown>=3.10.1
+tqdm>=4.30.0
+Pillow>=5.2.0
 opencv-python-headless
-tensorflow==1.9.0
-keras==2.2.0
-Flask==1.1.2
-gunicorn==19.9.0
+tensorflow>=1.9.0
+keras>=2.2.0
+Flask>=1.1.2
+gunicorn>=19.9.0
 psycopg2
 uwsgi
 deepface
